objects/Notarization__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignorEmail__c</fullName>
        <label>SignorEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignorFirstName__c</fullName>
        <label>SignorFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignorLastName__c</fullName>
        <label>SignorLastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notarization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Notarization</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>NA-{0}</displayFormat>
        <label>Notarization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notarizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>